--- a/index.html
+++ b/index.html
@@ -20,7 +20,50 @@
       </form>
     </nav>
 
+
+
     <!-- Video Section -->
+    <div class="container mt-4">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+
+        <div class="col">
+          <div class="card h-100">
+            <div class="ratio ratio-16x9">
+              <img src="/pictures/images (1).jpg" class="card-img-top" alt="video thumbnail">
+            </div>
+            <div class="card-body">
+              <h6 class="card-title">Students discuss their experiences with Python</h6>
+              <p class="card-text"><small class="text-muted">Channel 1 • 1M views</small></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100">
+            <div class="ratio ratio-16x9">
+              <img src="/pictures/images.jpg" class="card-img-top" alt="video thumbnail">
+            </div>
+            <div class="card-body">
+              <h6 class="card-title">Melsoft founder on challenges of the South African government</h6>
+              <p class="card-text"><small class="text-muted">Channel 2 • 500K views</small></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100">
+            <div class="ratio ratio-16x9">
+              <img src="/pictures/download.jpg" class="card-img-top" alt="video thumbnail">
+            </div>
+            <div class="card-body">
+              <h6 class="card-title">What is Melsoft Academy?</h6>
+              <p class="card-text"><small class="text-muted">Channel 3 • 250K views</small></p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
     <div class="container mt-4">
       <div class="row row-cols-1 row-cols-md-3 g-4">
 
